Fixing min-width layout bug for shorter-title reasons on the give and success-sotry pages

--- a/app/assets/stylesheets/components/_feature.scss
+++ b/app/assets/stylesheets/components/_feature.scss
@@ -6,7 +6,6 @@
   transition: height 0.2s ease-out;
   @include min-screen($bpMed) {
     padding: 25px;
-    min-height: 50%;
     max-height: 100%;
     overflow: hidden;
     transform-origin: top;
@@ -170,7 +169,7 @@
     margin: auto;
     position: relative;
     text-align: center;
-    padding: 100px 12px 160px;
+    padding: 160px 12px 160px;
     transition: opacity 1s ease-out;
     h2 {
       width: 100%;
@@ -384,9 +383,9 @@
   .feature {
     .feature-image {
       img {
-        width: 100%;
-        height: auto;
-        max-width: 100%;
+        width: auto;
+        min-width: 100%;
+        min-height: 100%;
       }
     }
   }
